--- a/css/Total.css
+++ b/css/Total.css
@@ -2,7 +2,8 @@
     position: relative;
     background: url(../images/sub3.jpg)no-repeat center center/cover;
     height: 50vh;
-    margin: 0 0 80px 0;
+    margin: 0 0 70px 0;
+    border-bottom: 1px solid #ddd;
 }
 
 .top_banner .img_box {
@@ -22,14 +23,32 @@
 }
 
 .total_banner .menu li {
+    position: relative;
     font-size: 20px;
     font-weight: 300;
     margin: 0 20px;
 }
 
+.total_banner .menu li::before {
+    position: absolute;
+    content: "";
+    bottom: -15px;
+    left: 50%;
+    width: 0;
+    height: 2px;
+    transform: translate(-50%, 0);
+    background: #52796f;
+
+    transition: 0.5s;
+}
+
 .total_banner .menu li:hover {
     color: #52796f;
     font-weight: 500;
+}
+
+.total_banner .menu li:hover::before {
+    width: 100%;
 }
 
 .mainNews h2 {
@@ -50,6 +69,16 @@
     width: 11px;
     height: 12px;
     background: url(../images/icon_hot.gif);
+}
+
+.mainNews .main_list li::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #ddd;
 }
 
 .mainNews .main_list a {
