--- a/css/main.css
+++ b/css/main.css
@@ -286,7 +286,7 @@
 .main_visual .btn_cicle .case {
     display: flex;
     flex-direction: column;
-  
+
     align-items: center;
 
     color: #fff;
@@ -549,7 +549,7 @@
     margin: 0 0 30px 0;
     font-weight: 300;
     line-height: 30px;
-    
+
 }
 
 /* ----------------------------------------- */
@@ -711,7 +711,7 @@
 .event_img {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-   gap: 30px;
+    gap: 30px;
 }
 
 
@@ -843,8 +843,7 @@
     color: #afafaf;
 }
 
-.footer .basic {
-}
+.footer .basic {}
 
 .footer ul {
     display: flex;
