--- a/css/main.css
+++ b/css/main.css
@@ -359,15 +359,15 @@
 }
 
 .main_map .top h3 {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 700;
     margin: 0 0 100px 0;
 
 }
 
 .main_map .top p {
-    font-size: 16px;
-    font-weight: 300;
+    font-size: 18px;
+    font-weight: 400;
     line-height: 25px;
     margin: 0 0 105px 0;
 }
@@ -535,7 +535,7 @@
 
 .main_banner .title {
     position: relative;
-    text-transform: uppercase;
+    /*  text-transform: uppercase; */
     margin: 0 10px 0 0;
 
     text-shadow: 2px 2px 4px rgb(58, 58, 58);
@@ -898,13 +898,21 @@
 
         position: fixed;
         top: 30px;
-        right: 30px;
+        right: 15px;
         z-index: 9999;
 
         font-size: 30px;
         color: #52796f;
-        padding: 5px 7px;
+        padding: 2px 3px;
         background: #ddd;
+        border-radius: 5px;
+
+        transition: 0.3s;
+    }
+
+    .mobile_btn.on {
+        color: #ddd;
+        background: #52796f;
     }
 
     .header {
@@ -917,17 +925,15 @@
         color: #ffffff;
         border-bottom: 1px solid rgb(255, 255, 255, 0.2);
         /* r */
-        inset: 0 0 0 0;
+        color: #2f3e46;
     }
 
     .header.on {
         background: #52796f;
-        border-bottom: 1px solid #2f3e46;
+        border-bottom: 1px solid rgba(47, 62, 70, 0.527);
         color: #e9e9e9;
         /* r */
-        background: none;
-        border-bottom: none;
-        color: inherit;
+        color: #2f3e46;
     }
 
     .header .header_wrap {
@@ -939,56 +945,66 @@
         transition: height 0.5s;
         /* r */
         height: 100px;
-        transition: none;
     }
 
     .header.on .header_wrap {
         height: 90px;
-        /* r */
-        height: 100px;
     }
 
     .header h1 {
         font-size: 0;
+        /* r */
+        z-index: 9999;
     }
 
     .header .gnb {
         /* r */
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: -100%;
-        width: calc(100% - 190px);
-        background: #222;
         transition: 0.5s;
     }
 
     .header .gnb.on {
-        left: 0;
+        position: fixed;
+        inset: 0 0 0 0;
+        background: rgba(34, 34, 34, 0.507)000;
     }
 
     .header .gnb>ul {
         display: flex;
         gap: 30px;
         /* r */
-        border: 1px solid red;
+        gap: 0;
+        padding: 100px 0 0 0;
     }
 
     .gnb .main_menu {
         display: flex;
         /* r */
         flex-direction: column;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: -100%;
+        width: calc(100% - 85px);
+        background: #7d9c94;
+        transition: 0.5s;
     }
 
 
+    .main_menu.on {
+        left: 0;
+    }
+
     .gnb .main_menu li {
         position: relative;
-        padding: 0 10px;
+        padding: 0;
+        background: #f0f0f0;
     }
 
     .header.on .gnb .main_menu li:hover {
         color: #fff;
         font-weight: 500;
+        /* r */
+        color: #2f3e46;
     }
 
 
@@ -996,11 +1012,31 @@
         display: block;
         font-size: 18px;
         line-height: 90px;
-        border: 1px solid blue;
+        /* r */
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 80px;
+        padding: 0 10px;
     }
 
-    #gnb_c {
-        background: #809791;
+    .gnb .main_menu>li {
+        /* r */
+        border-bottom: 1px solid #e6e6e6;
+        color: #747474;
+    }
+
+    #gnb_c>a {
+        position: relative;
+    }
+
+    #gnb_c>a::before {
+        content: "\f22c";
+        position: absolute;
+        top: 0;
+        right: 8%;
+        font-size: 25px;
+        color: #9e9e9e;
+        font-family: bootstrap-icons;
     }
 
     .gnb .main_menu .sub {
@@ -1029,6 +1065,7 @@
         padding: 0;
         border-radius: 0;
         transition: none;
+        background: none;
     }
 
 
@@ -1047,8 +1084,13 @@
         top: 100px;
     }
 
+    .gnb .sub li {
+        background: #ffffff;
+    }
+
     .gnb .sub li~li {
         border-top: 1px solid #dddddd;
+        /* r */
     }
 
     .gnb .sub a {
@@ -1056,87 +1098,24 @@
         color: #888888;
         font-size: 15px;
         line-height: 40px;
+        /* r */
+
     }
 
     .gnb .sub a:hover {
         color: #354f52;
         font-weight: 500;
+
     }
 
     .open_time {
+        /* r */
         color: #fff;
+        margin: 0 auto;
+        z-index: 999;
     }
 
     /* ------------------------------------------------------------- */
-
-    .main_visual {
-        height: 100vh;
-    }
-
-    .main_slide {
-        border-radius: 0 0 180px 0;
-        overflow: hidden;
-    }
-
-    .main_slide .itm .img_box {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-100%, -50%);
-        z-index: 999;
-
-        text-align: center;
-
-        margin: 0 0 50px 0;
-
-        opacity: 0;
-        transition: .5s 1s;
-    }
-
-    .main_slide .itm.on .img_box {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-    }
-
-
-    .main_slide .itm {
-        position: relative;
-        overflow: hidden;
-        height: 100vh;
-    }
-
-
-    .main_slide .itm01 {
-        height: 100vh;
-        background: url(../images/slide01.jpg) no-repeat center center/cover;
-    }
-
-    .main_slide .itm02 {
-        height: 100vh;
-        background: url(../images/slide02.jpg) no-repeat center center/cover;
-    }
-
-    .main_slide .itm03 {
-        height: 100vh;
-        background: url(../images/slide03.jpg) no-repeat center center/cover;
-    }
-
-    .main_slide .itm04 {
-        height: 100vh;
-        background: url(../images/slide04.jpg) no-repeat center center/cover;
-    }
-
-    .main_slide .itm::after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: url(../images/pattern5.png);
-        opacity: 0.35;
-    }
 
     /* --------------------------- */
 
@@ -1166,6 +1145,8 @@
     .main_visual:hover .arrows .left {
         transform: translate(30px, 0);
         color: #fff;
+        /* r */
+        transform: none;
     }
 
     .main_visual .arrows .right {
@@ -1176,6 +1157,8 @@
     .main_visual:hover .arrows .right {
         transform: translate(-30px, 0);
         color: #fff;
+        /* r */
+        transform: none;
     }
 
     .main_visual .arrows i::before {
@@ -1183,6 +1166,8 @@
         padding: 25px;
         background: rgba(0, 0, 0, 0.3);
         border-radius: 50%;
+        /* r */
+        font-size: 20px;
     }
 
     /* ---------------------------------------- */
@@ -1195,55 +1180,9 @@
 
         width: 200px;
         height: 200px;
+        /* r */
+        right: 15px;
     }
-
-    .main_visual .btn_cicle .case {
-        display: flex;
-        flex-direction: column;
-
-        align-items: center;
-
-        color: #fff;
-
-        width: 200px;
-        height: 200px;
-        background: linear-gradient(#52796f 50%, #f9f9f9 50%);
-
-        border: 10px solid #52796f;
-        border-radius: 50%;
-
-        text-align: center;
-        line-height: 26px;
-    }
-
-    .main_visual .btn_cicle:hover .case {
-        animation: headShake 1s infinite;
-    }
-
-    .main_visual .btn_cicle .case::before {
-        content: "\f87f";
-        display: block;
-        width: 26px;
-        height: 30px;
-        margin: 5px 0;
-        font-family: bootstrap-icons;
-        font-size: 28px;
-    }
-
-    .main_visual .btn_cicle p {
-        font-weight: 500;
-        margin: 0 0 30px 0;
-    }
-
-    .main_visual .btn_cicle span {
-        font-size: 60px;
-        font-weight: 600;
-
-        color: #52796f;
-    }
-
-
-
 
     /* ----------------------------------------- */
     .map .img_box img {
@@ -1253,7 +1192,10 @@
         width: auto;
     }
 
-    .main_map {}
+    .main_map {
+        /* r */
+
+    }
 
     .main_map .map {
         display: flex;
@@ -1268,23 +1210,14 @@
         padding: 150px 15px 90px 15px;
     }
 
-    .main_map .map .top {
-        opacity: 0;
-        transform: translate(0, 100px);
-        transition: 0.4s;
-    }
-
-    .main_map.on .map .top {
-        opacity: 1;
-        transform: translate(0, 0);
-    }
 
     .main_map .top h3 {
         font-size: 24px;
         font-weight: 700;
         margin: 0 0 100px 0;
         /* r */
-        margin: 0 0 30px 0;
+        font-size: 30px;
+        margin: 0 0 50px 0;
     }
 
     .main_map .top p {
@@ -1293,28 +1226,9 @@
         line-height: 25px;
         margin: 0 0 105px 0;
         /* r */
-        margin: 0 0 30px 0;
-    }
-
-    .main_map .top a {
-        font-style: italic;
-        font-size: 23px;
-        font-weight: 500;
-        color: #5f5f5f;
-        font-family: 'Noto Serif KR';
-    }
-
-    .main_map .map .top_img {
-        filter: brightness(88%);
-        opacity: 0;
-        transform: translate(0, 100px);
-        transition: 0.8s;
-    }
-
-
-    .main_map.on .map .top_img {
-        opacity: 1;
-        transform: translate(0, 0);
+        font-size: 18px;
+        margin: 0 0 50px 0;
+        font-weight: 400;
     }
 
 
@@ -1325,114 +1239,41 @@
         display: flex;
         gap: 100px;
         padding: 50px 0 150px 0;
-    }
-
-    .main_map02 .map .bottom_img {
-        filter: brightness(88%);
-        opacity: 0;
-        transform: translate(0, 100px);
-        transition: 0.8s;
-    }
-
-    .main_map02.on .map .bottom_img {
-        opacity: 1;
-        transform: translate(0, 0);
-    }
-
-
-    .main_map02 .map .bottom {
-
-        opacity: 0;
-        transform: translate(0, 100px);
-        transition: 0.3s;
-    }
-
-    .main_map02.on .map .bottom {
-        opacity: 1;
-        transform: translate(0, 0);
+        /* r */
+        gap: 30px;
+        flex-direction: column-reverse;
+        padding: 30px 15px 90px 15px;
     }
 
     .main_map02 .map .bottom h2 {
         font-size: 30px;
         font-weight: 700;
         margin: 0 0 30px 0;
+        /* r */
+        font-size: 35px;
+        margin: 0 0 50px 0;
     }
 
-    .main_map02 .map .bottom .desc {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0 0 30px 0;
-        padding: 0 0 15px 0;
-        border-bottom: 1px dashed #84a98c;
-    }
 
     .main_map02 .map .bottom .desc i {
-        padding: 20px;
-        color: #809791;
-        background: #e2e6e0;
-        border-radius: 50%;
-        font-size: 30px;
+        /* r */
+        font-size: 15px;
+        padding: 10px;
     }
 
     .main_map02 .map .bottom .desc .tel {
-        font-size: 35px;
-        font-weight: 700;
+        /* r */
+        font-size: 25px;
     }
 
     .main_map02 .map .bottom .btn_m {
-        border-radius: 25px;
-        padding: 18px 30px;
-        color: #fff;
-        background: #52796f;
-    }
-
-    .main_map02 .map .list>* {
-        display: grid;
-        grid-template-columns: 100px 1fr;
-        margin: 0 0 20px 0;
-        line-height: 1.6px;
-    }
-
-    .main_map02 .list_dot strong {
-        font-size: 17px;
-        font-weight: 500;
-        margin: 10px 0 auto 0;
-    }
-
-    .main_map02 .list_dot p {
-        line-height: 23px;
-        color: #3f3f3f;
-    }
-
-    .main_map02 .list_dot span {
-        color: #8d8d8d;
-    }
-
-    .main_map02 .list_dot a {
-        border: 1px solid #ddd;
-        padding: 5px 10px;
-        background: #f7f7f7;
-    }
-
-    .main_map02 .map .list .ls2 {
-        letter-spacing: 30px;
-    }
-
-    .main_map02 .list li {
-        position: relative;
+        /* r */
+        padding: 15px 20px;
     }
 
     .main_map02 .list li::before {
-        position: absolute;
-        content: "";
-        top: 0;
-        left: 0;
-        transform: translate(-15px, 6px);
-        width: 5px;
-        height: 5px;
-        background: #52796f;
-        border-radius: 5px;
+        /* r */
+        display: none;
     }
 
 
@@ -1455,6 +1296,7 @@
         left: 0;
         background: url(../images/pattern5.png);
         opacity: 0.45;
+        /* r */
     }
 
     .main_banner .title {
@@ -1464,17 +1306,27 @@
 
         text-shadow: 2px 2px 4px rgb(58, 58, 58);
         /* r */
-        border: 1px solid red;
+        margin: 0;
+        display: none;
+
+        /*글씨 작게 나오는 현상  */
+
+
     }
 
     .main_banner .title h2 {
         margin: 0 0 50px 0;
+        /* r */
+        font-size: 18px;
     }
 
     .main_banner .title p {
         margin: 0 0 30px 0;
         font-weight: 300;
         line-height: 30px;
+        /* r */
+        line-height: 23px;
+        text-align: left;
 
     }
 
@@ -1484,6 +1336,8 @@
     .main_content {
         position: relative;
         padding: 100px 0;
+        /*  */
+        padding: 60px 0;
     }
 
     .main_content .title {
@@ -1549,6 +1403,8 @@
         border-radius: 50%;
         box-shadow: 0px 0px 20px #717171;
         transition: 0.2s;
+        /* r */
+        font-size: 25px;
     }
 
     .main_content .arrows i:hover::before {
@@ -1562,43 +1418,9 @@
     .main_content .content_slide {
         position: relative;
         padding: 80px 0;
+        /* r */
+        padding: 40px 0;
     }
-
-    .content_slide figure {
-        position: relative;
-        margin: 0 15px 0 15px;
-    }
-
-    .content_slide figure::before {
-        content: "";
-        position: absolute;
-        inset: 0 0 0 0;
-        background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent);
-        cursor: pointer;
-    }
-
-    .content_slide figure img {
-        height: 500px;
-        width: 700px;
-        object-fit: cover;
-        border: 1px solid #ddd;
-    }
-
-    .content_slide figure .txt {
-        position: absolute;
-        bottom: 0;
-        color: #fff;
-        margin: 25px 25px;
-    }
-
-
-    .content_slide h3 {
-        margin: 0 0 15px 0;
-        font-size: 30px;
-        font-weight: 500;
-    }
-
-
 
     /* ----------------------------------------- */
 
@@ -1607,7 +1429,7 @@
         padding: 80px 0;
         background: linear-gradient(#f0f0f0 20%, #00000000 80%);
         /* r */
-        padding: 60px 0;
+        padding: 50px 0;
     }
 
     .main_event .title {
@@ -1619,18 +1441,15 @@
         transform: translate(0, 100px);
         transition: 0.4s;
         /* r */
-        margin: 0 0 60px 0;
-    }
-
-    .main_event.on .title {
-        opacity: 1;
-        transform: translate(0, 0);
+        margin: 0 0 30px 0;
     }
 
     .main_event .btn {
         text-align: center;
         width: 250px;
         margin: 80px auto 0 auto;
+        /* r */
+        margin: 50px auto 0 auto;
     }
 
     .main_event .btn i {
